Fix: Extending horizontal scroll on tree view (#109)
* Extending horizontal scroll to apply to entire tree view rather than only sub-tree structures.
* Added bottom margin to account for overlapping footer in Console.

--- a/packages/scene-composer/src/components/panels/SceneHierarchyPanel/components/SubModelTree/SubModelTree.scss
+++ b/packages/scene-composer/src/components/panels/SceneHierarchyPanel/components/SubModelTree/SubModelTree.scss
@@ -2,24 +2,20 @@
   .tm-sub-model {
     .tm-tree-item-inner {
       background-color: #414750;
-      border-bottom: 1px solid #2a2e33;
       display: grid;
       grid-template-columns: repeat(10, 1fr);
-      padding-top: 0;
-      padding-bottom: 0;
-      padding-right: 0px;
-
+      padding: 0 8px;
+      
       .tm-icon-button {
         grid-column: 1/2;
-        position: relative;
       }
 
       span {
+        background-color: #414750;
         grid-column: 2/-1;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        background-color: #414750;
 
         p {
           background-color: #414750;
@@ -41,13 +37,8 @@
         }
       }
     }
-
     .actions {
       float: right;
-    }
-
-    .tm-tree.tm-submodel-tree {
-      border-left: 1px solid green;
     }
   }
 }
